Freemarker + bootstrap for main page, product categories, cart

--- a/onlineshop/pom.xml
+++ b/onlineshop/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.27-incubating</version>
+        </dependency>
     </dependencies>
 
     <build>
